tests/neg/i13026.scala
val x: Int = "not an int" // error
val y: Int = "not an int" // error
def foo(x: Any) = x.foo // error
